--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -27,7 +27,7 @@ p a:hover {
   height: 3rem; }
 
 .content {
-  padding: 4.5rem;
+  padding: 4rem;
   color: #44232e;
   overflow: hidden; }
 
@@ -35,20 +35,32 @@ p a:hover {
   color: #ff7a7e; }
 
 .greeting h4 {
-  font: 1.78rem "Rubik", sans-serif;
+  font-size: 1.78rem;
+  font-style: normal;
+  font-weight: 400;
+  font-family: "Rubik", sans-serf;
   margin: 3rem 0 0 0; }
 
 .greeting h1 {
-  font: 900 4.21rem "Playfair Display", serif;
+  font-size: 4.21rem;
+  font-style: normal;
+  font-weight: 900;
+  font-family: "Playfair Display", serf;
   margin: 0; }
 
 .labels {
-  font: 1.78rem "Playfair Display", serif;
+  font-size: 1.78rem;
+  font-style: normal;
+  font-weight: 400;
+  font-family: "Playfair Display", serf;
   margin: -8px 0 0 0; }
 
 .blurb {
   margin-top: 2rem;
-  font: 1.33rem "Rubik", sans-serif;
+  font-size: 1.33rem;
+  font-style: normal;
+  font-weight: 400;
+  font-family: "Rubik", sans-serf;
   width: 752px;
   line-height: 1.5; }
 
@@ -64,14 +76,20 @@ p a:hover {
   border: none; }
 
 .disclaimer {
-  font: 1rem "Rubik", sans-serif;
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  font-family: "Rubik", sans-serf;
   color: #ff7a7e;
   margin: 3.5rem 0 8px 0; }
 
 .journal-link {
   display: inline-block;
   margin-top: 1.5rem;
-  font: 700 1.33rem "Playfair Display", serif;
+  font-size: 1.33rem;
+  font-style: normal;
+  font-weight: 700;
+  font-family: "Playfair Display", serf;
   color: inherit;
   text-decoration: none;
   transition: border 0.15s ease-out;
@@ -83,18 +101,24 @@ p a:hover {
 
 .journal .logo {
   position: fixed;
-  top: 4.5rem; }
+  top: 4rem; }
 
 .journal-top {
   margin: 0 14rem 48px; }
 
 .journal-top h1 {
   margin: 0;
-  font: 900 italic 3.16rem "Playfair Display", serif; }
+  font-size: 3.16rem;
+  font-style: italic;
+  font-weight: 900;
+  font-family: "Playfair Display", serf; }
 
 .journal-top h2 {
   margin: 0 2rem;
-  font: italic 2.37rem "Playfair Display", serif; }
+  font-size: 2.37rem;
+  font-style: italic;
+  font-weight: 400;
+  font-family: "Playfair Display", serf; }
 
 .grid-container {
   width: 100%;
@@ -119,22 +143,37 @@ p a:hover {
   width: 50%;
   padding: 0 1.5rem; }
 
-.post {
+.post h3 {
+  font-size: 2.37rem;
+  font-style: normal;
+  font-weight: 700;
+  font-family: "Playfair Display", serf;
+  margin: 0;
+  line-height: 1.1;
+  font-kerning: normal;
+  -moz-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+  -ms-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+  -webkit-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+  font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh"; }
+
+.post p {
+  line-height: 1.5; }
+
+.post .lede {
+  font-size: 1.33rem;
+  font-style: normal;
+  font-weight: 400;
+  font-family: "Rubik", sans-serf;
+  margin: 8px 0 0 0; }
+
+.preview {
   padding: 2rem;
   transition: box-shadow 0.3s ease-out; }
 
-.post:hover {
+.preview:hover {
   box-shadow: inset 0 0 0 1rem #ff7a7e; }
 
-.post h3 {
-  font: 700 2.37rem "Playfair Display", serif;
-  margin: 0; }
-
-.post:hover h3 {
+.preview:hover h3 {
   color: #ff7a7e; }
-
-.post .lede {
-  font: 1.78rem "Rubik", sans-serif;
-  margin: 16px 0 0 0; }
 
 /*# sourceMappingURL=main.css.map */
