--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -1,3 +1,6 @@
+@import 'fonts';
+@import 'colors';
+
 body {
   background: rgb(255, 244,242);
   color: rgb(68, 35, 46);
@@ -32,7 +35,7 @@ p a:hover {
 }
 
 .content {
-  padding: 4.5rem;
+  padding: 4rem;
   color: rgb(68, 35, 46);
   overflow: hidden;
 }
@@ -42,23 +45,27 @@ p a:hover {
 }
 
 .greeting h4 {
-  font: 1.78rem "Rubik", sans-serif;
+  font-size: 1.78rem;
+  @include rubik-n4;
   margin: 3rem 0 0 0;
 }
 
 .greeting h1 {
-  font: 900 4.21rem "Playfair Display", serif;
+  font-size: 4.21rem;
+  @include playfair-n9;
   margin: 0;
 }
 
 .labels {
-  font: 1.78rem "Playfair Display", serif;
+  font-size: 1.78rem;
+  @include playfair-n4;
   margin: -8px 0 0 0;
 }
 
 .blurb {
   margin-top: 2rem;
-  font: 1.33rem "Rubik", sans-serif;
+  font-size: 1.33rem;
+  @include rubik-n4;
   width: 752px;
   line-height: 1.5;
 }
@@ -81,7 +88,8 @@ p a:hover {
 }
 
 .disclaimer {
-  font: 1rem "Rubik", sans-serif;
+  font-size: 1rem;
+  @include rubik-n4;
   color: rgb(255, 122, 126);
   margin: 3.5rem 0 8px 0;
 }
@@ -89,7 +97,8 @@ p a:hover {
 .journal-link {
   display: inline-block;
   margin-top: 1.5rem;
-  font: 700 1.33rem "Playfair Display", serif;
+  font-size: 1.33rem;
+  @include playfair-n7;
   color: inherit;
   text-decoration: none;
   transition: border 0.15s ease-out;
@@ -104,7 +113,7 @@ p a:hover {
 .journal {
   .logo {
     position: fixed;
-    top: 4.5rem;
+    top: 4rem;
   }
 }
 
@@ -114,12 +123,14 @@ p a:hover {
 
 .journal-top h1 {
   margin: 0;
-  font: 900 italic 3.16rem "Playfair Display", serif;
+  font-size: 3.16rem;
+  @include playfair-i9;
 }
 
 .journal-top h2 {
   margin: 0 2rem;
-  font: italic 2.37rem "Playfair Display", serif;
+  font-size: 2.37rem;
+  @include playfair-i4;
 }
 
 .grid-container {
@@ -149,25 +160,37 @@ p a:hover {
   padding: 0 1.5rem;
 }
 
-.post {
+.post h3 {
+  font-size: 2.37rem;
+  @include playfair-n7;
+  margin: 0;
+  line-height: 1.1;
+  font-kerning: normal;
+  -moz-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+  -ms-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+  -webkit-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+  font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+}
+
+.post p {
+  line-height: 1.5;
+}
+
+.post .lede {
+  font-size: 1.33rem;
+  @include rubik-n4;
+  margin: 8px 0 0 0;
+}
+
+.preview {
   padding: 2rem;
   transition: box-shadow 0.3s ease-out;
 }
 
-.post:hover {
+.preview:hover {
   box-shadow: inset 0 0 0 1rem rgb(255, 122, 126);
 }
 
-.post h3 {
-  font: 700 2.37rem "Playfair Display", serif;
-  margin: 0;
-}
-
-.post:hover h3 {
+.preview:hover h3 {
   color: rgb(255, 122, 126);
-}
-
-.post .lede {
-  font: 1.78rem "Rubik", sans-serif;
-  margin: 16px 0 0 0;
 }
