--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -8,6 +8,15 @@ body {
   font-feature-settings: "kern", "liga", "clig", "calt";
   margin: 0; }
 
+h1,
+h2,
+h3 {
+  font-kerning: normal;
+  -moz-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+  -ms-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+  -webkit-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+  font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh"; }
+
 p a {
   text-decoration: none;
   color: inherit;
@@ -106,14 +115,14 @@ p a:hover {
 .journal-top {
   margin: 0 14rem 48px; }
 
-.journal-top h1 {
+.journal-top h2 {
   margin: 0;
   font-size: 3.16rem;
   font-style: italic;
   font-weight: 900;
   font-family: "Playfair Display", serf; }
 
-.journal-top h2 {
+.journal-top h3 {
   margin: 0 2rem;
   font-size: 2.37rem;
   font-style: italic;
@@ -143,18 +152,21 @@ p a:hover {
   width: 50%;
   padding: 0 1.5rem; }
 
+.post .date {
+  font-size: 1.33rem;
+  font-style: normal;
+  font-weight: 400;
+  font-family: "Rubik", sans-serf;
+  margin: 0 0 2px 0;
+  color: rgba(68, 35, 46, 0.6); }
+
 .post h3 {
   font-size: 2.37rem;
   font-style: normal;
   font-weight: 700;
   font-family: "Playfair Display", serf;
   margin: 0;
-  line-height: 1.1;
-  font-kerning: normal;
-  -moz-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
-  -ms-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
-  -webkit-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
-  font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh"; }
+  line-height: 1.1; }
 
 .post p {
   line-height: 1.5; }
@@ -164,7 +176,7 @@ p a:hover {
   font-style: normal;
   font-weight: 400;
   font-family: "Rubik", sans-serf;
-  margin: 8px 0 0 0; }
+  margin: 1.5rem 0 0 0; }
 
 .preview {
   padding: 2rem;
