--- a/stylesheets/main.scss
+++ b/stylesheets/main.scss
@@ -2,8 +2,8 @@
 @import 'colors';
 
 body {
-  background: rgb(255, 244,242);
-  color: rgb(68, 35, 46);
+  background: $bg;
+  color: $text;
   font-kerning: normal;
   -moz-font-feature-settings: "kern", "liga", "clig", "calt";
   -ms-font-feature-settings: "kern", "liga", "clig", "calt";
@@ -12,17 +12,27 @@ body {
   margin: 0;
 }
 
+h1,
+h2,
+h3 {
+  font-kerning: normal;
+  -moz-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+  -ms-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+  -webkit-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+  font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+}
+
 p a {
   text-decoration: none;
   color: inherit;
-  border-bottom: 1px solid rgb(255, 209, 210);
-  box-shadow: inset 0 -4px 0 rgb(255, 209, 210);
+  border-bottom: 1px solid $link;
+  box-shadow: inset 0 -4px 0 $link;
   transition: background 0.3s ease-out;
 }
 
 p a:hover,
 p a:focus {
-  background: rgb(255, 209, 210);
+  background: $link;
 }
 
 p a:active,
@@ -41,7 +51,7 @@ p a:hover {
 }
 
 .asterisk {
-  color: rgb(255, 122, 126);
+  color: $brand-pink;
 }
 
 .greeting h4 {
@@ -74,14 +84,10 @@ p a:hover {
   margin-top: 0;
 }
 
-//.summer-plans {
-//  margin-bottom: 8px;
-//}
-
 .blurb hr {
   width: 3rem;
   height: 4px;
-  background: rgb(255, 122, 126);
+  background: $brand-pink;
   outline: 0;
   margin: 0;
   border: none;
@@ -90,7 +96,7 @@ p a:hover {
 .disclaimer {
   font-size: 1rem;
   @include rubik-n4;
-  color: rgb(255, 122, 126);
+  color: $brand-pink;
   margin: 3.5rem 0 8px 0;
 }
 
@@ -102,12 +108,12 @@ p a:hover {
   color: inherit;
   text-decoration: none;
   transition: border 0.15s ease-out;
-  border-bottom: 0 solid rgb(255, 209, 210);
+  border-bottom: 0 solid $link;
 }
 
 .journal-link:hover,
 .journal-link:focus {
-  border-bottom: 4px solid rgb(255, 209, 210);
+  border-bottom: 4px solid $link;
 }
 
 .journal {
@@ -121,13 +127,13 @@ p a:hover {
   margin: 0 14rem 48px;
 }
 
-.journal-top h1 {
+.journal-top h2 {
   margin: 0;
   font-size: 3.16rem;
   @include playfair-i9;
 }
 
-.journal-top h2 {
+.journal-top h3 {
   margin: 0 2rem;
   font-size: 2.37rem;
   @include playfair-i4;
@@ -160,16 +166,18 @@ p a:hover {
   padding: 0 1.5rem;
 }
 
+.post .date {
+  font-size: 1.33rem;
+  @include rubik-n4;
+  margin: 0 0 2px 0;
+  color: $text-lighter;
+}
+
 .post h3 {
   font-size: 2.37rem;
   @include playfair-n7;
   margin: 0;
   line-height: 1.1;
-  font-kerning: normal;
-  -moz-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
-  -ms-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
-  -webkit-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
-  font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
 }
 
 .post p {
@@ -179,7 +187,7 @@ p a:hover {
 .post .lede {
   font-size: 1.33rem;
   @include rubik-n4;
-  margin: 8px 0 0 0;
+  margin: 1.5rem 0 0 0;
 }
 
 .preview {
@@ -188,9 +196,9 @@ p a:hover {
 }
 
 .preview:hover {
-  box-shadow: inset 0 0 0 1rem rgb(255, 122, 126);
+  box-shadow: inset 0 0 0 1rem $brand-pink;
 }
 
 .preview:hover h3 {
-  color: rgb(255, 122, 126);
+  color: $brand-pink;
 }
