--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,11 @@
     <meta name="author" content="">
 
     <title>{{ page.title }}</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico?" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i|Rubik:400,400i,700,700i,900,900i" rel="stylesheet">
-    <link rel="stylesheet" href="/stylesheets/main.css">
+    <link rel="stylesheet" href="/stylesheets/styles.css">
 </head>
 <body>
 {{ content }}
