--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,4 +1,51 @@
-$rubik: "Rubik", sans-serf;
+$lineHeight-base: 1.5;
+$lineHeight-tight: 1.1;
+
+@mixin t1 {
+  font-size: 4.21rem;
+}
+
+@mixin t2 {
+  font-size: 3.16rem;
+}
+
+@mixin t3 {
+  font-size: 2.37rem;
+}
+
+@mixin t4 {
+  font-size: 1.78rem;
+}
+
+@mixin t5 {
+  font-size: 1.33rem;
+}
+
+@mixin t6 {
+  font-size: 1rem;
+}
+
+@mixin s1 {
+  font-size: 0.75rem;
+}
+
+@mixin ligatures {
+  font-kerning: normal;
+  -moz-font-feature-settings: "kern", "liga", "clig", "calt";
+  -ms-font-feature-settings: "kern", "liga", "clig", "calt";
+  -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
+  font-feature-settings: "kern", "liga", "clig", "calt";
+}
+
+@mixin swashes {
+  font-kerning: normal;
+  -moz-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+  -ms-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+  -webkit-font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+  font-feature-settings: "kern", "liga", "clig", "calt", "dlig", "swsh";
+}
+
+$rubik: "Rubik", sans-serif;
 @mixin rubik-n4 {
   font-style: normal;
   font-weight: 400;
@@ -30,8 +77,7 @@ $rubik: "Rubik", sans-serf;
   font-family: $rubik;
 }
 
-
-$playfair: "Playfair Display", serf;
+$playfair: "Playfair Display", serif;
 @mixin playfair-n4 {
   font-style: normal;
   font-weight: 400;
